--- a/src/index.html
+++ b/src/index.html
@@ -376,7 +376,7 @@
     </section>
 
     <section class="ambassadors innerWrapper">
-        <div class="wrapper ambassadors__bg">
+        <div class="wrapper">
             <div class="ambassadors__title titleText">Амбассадоры</div>
             <div class="ambassadors__filter  filter">
                 <select class="select ambassadors__select filter__select" name="country" size="1">
@@ -419,7 +419,8 @@
                             Попробовать
                             сквош
                         </button>
-                        <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
+                        <a href="/ambassador.html" class="linkBlock__item linkBlock__item--white ambassadors__link">
+                            Подробнее</a>
                     </div>
                 </div>
                 <div class="ambassadors__item ambassador">
@@ -448,7 +449,7 @@
                             Попробовать
                             сквош
                         </button>
-                        <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
+                        <a href="/ambassador.html" class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="ambassadors__item ambassador">
@@ -477,7 +478,7 @@
                             Попробовать
                             сквош
                         </button>
-                        <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
+                        <a href="/ambassador.html" class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
                     </div>
                 </div>
                 <div class="ambassadors__item ambassador">
@@ -506,7 +507,8 @@
                             Попробовать
                             сквош
                         </button>
-                        <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
+                        <a href="/ambassador.html" class="linkBlock__item linkBlock__item--white ambassadors__link">
+                            Подробнее</a>
                     </div>
                 </div>
                 <div class="ambassadors__item ambassador">
@@ -535,7 +537,8 @@
                             Попробовать
                             сквош
                         </button>
-                        <a class="linkBlock__item linkBlock__item--white ambassadors__link">Подробнее</a>
+                        <a href="/ambassador.html" class="linkBlock__item linkBlock__item--white ambassadors__link">
+                            Подробнее</a>
                     </div>
                 </div>
             </div>
