--- a/src/club.html
+++ b/src/club.html
@@ -75,7 +75,7 @@
                 <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">О нас</a>
+                <a class="navigation__link" href="/about.html">О нас</a>
             </div>
             <div class="navigation__item ">
                 <a class="navigation__link" href="#">Сквош-вики</a>
@@ -244,7 +244,7 @@
                             <a class="navigation__link navigation__link--white" href="/ambassadors.html">Амбассадоры</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">О нас</a>
+                            <a class="navigation__link navigation__link--white" href="/about.html">О нас</a>
                         </div>
                         <div class="navigation__item">
                             <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
