--- a/src/clubs.html
+++ b/src/clubs.html
@@ -77,7 +77,7 @@
                 <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">О нас</a>
+                <a class="navigation__link" href="/about.html">О нас</a>
             </div>
             <div class="navigation__item ">
                 <a class="navigation__link" href="#">Сквош-вики</a>
@@ -210,7 +210,7 @@
                             <a class="navigation__link navigation__link--white" href="/ambassadors.html">Амбассадоры</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">О нас</a>
+                            <a class="navigation__link navigation__link--white" href="/about.html">О нас</a>
                         </div>
                         <div class="navigation__item">
                             <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
