--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
             <div class="slider__item">
                 <div class="slide">
                     <div class="slide__description slideDescription slide__block">
-                        <div class="slide__title slideTitle">
+                        <div class="slide__title slideTitle slideTitle--leftpad">
                     <span class="slideTitle__text slideTitle__text--red-white">
                         Влюбляем
                     </span>
