--- a/src/404.html
+++ b/src/404.html
@@ -1,10 +1,348 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>:SQUASHFORFRIENDS</title>
+    <link rel="icon" href="./favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap" rel="stylesheet">
+    <link href="http://allfont.ru/allfont.css?fonts=bebas-neue" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<section class="topBar">
+    <div class="header__toolbar toolbar">
+        <div class="toolbar__counter counter">
+            <div class="counter__item toolbar__item">
+                <span class="counter__itemDigit">8</span>&nbsp;стран
+            </div>
+            <div class="counter__item toolbar__item">
+                <span class="counter__itemDigit">12</span>&nbsp;клубов
+            </div>
+            <div class="counter__item toolbar__item">
+                <span class="counter__itemDigit">12&nbsp;230</span>&nbsp;игроков
+            </div>
+            <div class="counter__item toolbar__item">
+                <span class="counter__itemDigit">123</span>&nbsp;амбассадора
+            </div>
+        </div>
+        <div class="toolbar__helpers">
+            <div class="search toolbar__helper">
+                <img class="search__icon js-search-icon" src="./img/search.png" alt="Поиск"/>
+            </div>
+            <div class="language toolbar__helper">
+                <span class="language__item  language__item--active">Ru</span>
+                <span class="language__item language__item--last">En</span>
+            </div>
+            <div class="social toolbar__helper">
+                <div class="social__item">
+                    <a href="https://vk.com" target="_blank" class="social__link">
+                        <img class="social__image" src="img/vk.png" alt="VK"/>
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="https://facebook.com" target="_blank" class="social__link">
+                        <img class="social__image" src="img/fb.png" alt="FB"/>
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="https://instagram.com" target="_blank" class="social__link">
+                        <img class="social__image" src="img/ig.png" alt="Instagram"/>
+                    </a>
+                </div>
+                <div class="social__item">
+                    <a href="https://youtube.com" target="_blank" class="social__link">
+                        <img class="social__image" src="img/yt.png" alt="youtube"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<header class="header">
+    <div class="menu">
+        <nav class="menu__block navigation nav">
+            <div class="navigation__item navigation__item--red ">
+                <div class="logoSymbol logoSymbol--link logoSymbol--white">
+                    <a class="navigation__link navigation__link--white" href="/">squash4friends</a>
+                </div>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="/clubs.html">Клубы</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="/about.html">О нас</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Сквош-вики</a>
+            </div>
+            <div class="navigation__item ">
+                <a class="navigation__link" href="#">Статьи</a>
+            </div>
+        </nav>
+        <div class="feedback menu__block linkBlock">
+            <button data-modal="#order-ambassador"
+                    class="js-openModal feedback__item linkBlock__item linkBlock__item--white">Стать
+                амбассадором
+            </button>
+            <button data-modal="#try-squash" class="js-openModal feedback__item linkBlock__item linkBlock__item--red">
+                Попробовать
+                сквош
+            </button>
+        </div>
+    </div>
+</header>
+<main>
+    <section class="slider">
 
+        <div class="slider__item">
+            <div class="slide">
+                <div class="slide__description slideDescription slide__block">
+                    <ul class="breadcrumbs">
+                        <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="/">Главная</a></li>
+                        <li class="breadcrumbs__item">404</li>
+                    </ul>
+                    <div class="slide__title slideTitle">
+                        <span class="slideTitle__text">Страница<br></span>
+                              <span class="slideTitle__text">не найдена</span>
+                    </div>
+                    <div class="slideDescription__content ">
+                        <div class="logoSymbol"> <span
+                                class="slideDescription__text slideDescription__text--bold"> Неправильно набран адрес или такой страницы на сайте больше не существует.
+                            <br>
+                            <br>
+                            Вы можете вернуться назад или перейти на главную, нажав на кнопку ниже.</span></div>
+
+                        <div class="linkBlock slide__linkBlock"><a href="/"
+                                                  class="linkBlock__item linkBlock__item--red">Перейти на главную &rarr;
+                        </a></div>
+
+                    </div>
+                </div>
+                <div class="slide__photo slidePromo slide__block"
+                     style="background-image: url('img/404.png')">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__nav">
+            <div class="wrapper">
+                <div class="footer__navContainer">
+                    <nav class="menu__block navigation nav">
+                        <div class="navigation__item navigation__item--red ">
+                            <div class="logoSymbol logoSymbol--link logoSymbol--white">
+                                <a class="navigation__link navigation__link--white" href="/">squash4friends</a>
+                            </div>
+                        </div>
+                        <div class="navigation__item ">
+                            <a class="navigation__link navigation__link--white" href="/clubs.html">Клубы</a>
+                        </div>
+                        <div class="navigation__item ">
+                            <a class="navigation__link navigation__link--white" href="/ambassadors.html">Амбассадоры</a>
+                        </div>
+                        <div class="navigation__item ">
+                            <a class="navigation__link navigation__link--white" href="/about.html">О нас</a>
+                        </div>
+                        <div class="navigation__item">
+                            <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
+                        </div>
+                        <div class="navigation__item ">
+                            <a class="navigation__link navigation__link--white" href="#">Статьи</a>
+                        </div>
+                    </nav>
+                    <div class="social toolbar__helper">
+                        <div class="social__item">
+                            <a href="https://vk.com" target="_blank" class="social__link">
+                                <img class="social__image" src="img/vk.png" alt="VK"/>
+                            </a>
+                        </div>
+                        <div class="social__item">
+                            <a href="https://facebook.com" target="_blank" class="social__link">
+                                <img class="social__image" src="img/fb.png" alt="FB"/>
+                            </a>
+                        </div>
+                        <div class="social__item">
+                            <a href="https://instagram.com" target="_blank" class="social__link">
+                                <img class="social__image" src="img/ig.png" alt="Instagram"/>
+                            </a>
+                        </div>
+                        <div class="social__item">
+                            <a href="https://youtube.com" target="_blank" class="social__link">
+                                <img class="social__image" src="img/yt.png" alt="youtube"/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__block footerCounter">
+            <div class="wrapper">
+                <ul class="footerCounter__container counter">
+                    <li class="footerCounter__item">
+                        <img src="img/globe.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">8</span>&nbsp;стран
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="img/ball.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">12</span>&nbsp;клубов
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="img/person.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">12 230</span>&nbsp;игроков
+                        </div>
+                    </li>
+                    <li class="footerCounter__item">
+                        <img src="img/speaker.png" alt="" class="footerCounter__image">
+                        <div class="footerCounter__textBlock counter__item">
+                            <span class="counter__itemDigit">123</span>&nbsp;амбассадора
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer__block bottomBar">
+            <div class="wrapper">
+                <div class="bottomBar__content">
+                    <div class="bottomBar__copyright">
+                        © squash4friends 2019
+                    </div>
+                    <a href="#" class="bottomBar__policy">
+                        Политика конфиденциальности
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <section class="searchBox">
+        <div class="searchBox__container">
+            <div class="searchBox__title">Поиск по сайту</div>
+            <div class="searchBox__inputWrapper"><input type="text" placeholder="Начните набирать"
+                                                        class="searchBox__input"></div>
+        </div>
+    </section>
+
+    <form class="modalForm form" id="order-ambassador" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__titleBlock">
+
+            <div class="modalForm__title">Стать амбассадором</div>
+            <div class="modalForm__selectBox">
+                <select name="country" class="select modalForm__select">
+                    <option value="Россия">Россия</option>
+                    <option value="Россия">Франция</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="Россия">Москва</option>
+                    <option value="Россия">Новосибирск</option>
+                </select>
+            </div>
+        </div>
+        <div class="modalForm__fields">
+            <div class="inputWrapper"><input type="text" class="modalForm__input input required" name="name"
+                                             placeholder="ФИО*"></div>
+
+            <div class="inputWrapper"><input type="tel"
+                                             class="modalForm__input input required"
+                                             name="phone" placeholder="Телефон*"></div>
+            <div class="inputWrapper"><input type="email" class="modalForm__input input required" name="email"
+                                             placeholder="Email*"></div>
+            <div class="modalForm__text">
+                Нажимая на кнопку, вы принимаете условия Политики конфиденциальности
+            </div>
+        </div>
+        <div class="modalForm__submitBlock linkBlock">
+            <button type="submit"
+                    class="js-submit modalForm__submit linkBlock__item linkBlock__item--red">Отправить заявку
+                &rarr;
+            </button>
+        </div>
+    </form>
+
+    <form class="modalForm form" id="try-squash" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__titleBlock">
+
+            <div class="modalForm__title">Попробовать сквош</div>
+            <div class="modalForm__selectBox">
+                <select name="country" class="select modalForm__select">
+                    <option value="Россия">Россия</option>
+                    <option value="Россия">Франция</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="Россия">Москва</option>
+                    <option value="Россия">Новосибирск</option>
+                </select>
+                <select name="city" class="select modalForm__select">
+                    <option value="">Выберите клуб</option>
+                    <option value="Россия">Сквош-клуб "Москва"</option>
+                    <option value="Россия">Сквош-клуб "Москва"</option>
+                </select>
+            </div>
+        </div>
+        <div class="modalForm__fields">
+            <div class="inputWrapper"><input type="text" class="modalForm__input input required" name="name"
+                                             placeholder="ФИО"></div>
+            <div class="inputWrapper"><input type="tel" class="modalForm__input input required" name="phone"
+                                             placeholder="Телефон"></div>
+            <div class="inputWrapper"><input type="email" class="modalForm__input input required" name="email"
+                                             placeholder="Email"></div>
+            <div class="modalForm__text">
+                Нажимая на кнопку, вы принимаете условия Политики конфиденциальности
+            </div>
+        </div>
+        <div class="modalForm__submitBlock linkBlock">
+            <button type="submit" class="js-submit modalForm__submit linkBlock__item linkBlock__item--red">Отправить
+                заявку
+                &rarr;
+            </button>
+        </div>
+    </form>
+    <form class="modalForm" id="success" style="display: none;">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__fields">
+            <h2>Заявка отправлена</h2>
+            Как только ваша заявка будет рассмотрена, мы свяжемся с вами
+        </div>
+    </form>
+
+    <form class="modalForm modalForm--insta" id="insta-modal" style="display: none">
+        <div class="modalForm__close js-formClose">
+            <span></span>
+        </div>
+        <div class="modalForm__left">
+            <img class="modalForm__img" src="./img/insta-modal.png">
+        </div>
+        <div class="modalForm__right">
+            <div class="modalForm__right__subTitle">
+                <img src="img/ig.png"> @squash4friends
+            </div>
+            <div class="modalForm__rightText">
+                <h2>Всё самое интересное — в Instagram</h2>
+                Подпишись на наш инстаграм, чтобы быть в курсе всех событий
+            </div>
+            <div class="modalForm__linkBlock linkBlock">
+                <a class="modalForm__link linkBlock__item  linkBlock__item--red" href="https://instagram.com">Следить за
+                    squash4friends</a>
+            </div>
+        </div>
+    </form>
+</main>
+<div class="darkenMask" style="display: none;"></div>
 </body>
 </html>
