add articles page

--- a/src/ambassadors.html
+++ b/src/ambassadors.html
@@ -80,10 +80,10 @@
                 <a class="navigation__link" href="/about.html">О нас</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Сквош-вики</a>
+                <a class="navigation__link" href="/wiki.html">Сквош-вики</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Статьи</a>
+                <a class="navigation__link" href="/articles.html">Статьи</a>
             </div>
         </nav>
         <div class="feedback menu__block linkBlock">
@@ -394,10 +394,10 @@
                             <a class="navigation__link navigation__link--white" href="/about.html">О нас</a>
                         </div>
                         <div class="navigation__item">
-                            <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
+                            <a class="navigation__link navigation__link--white" href="/wiki.html">Сквош-вики</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">Статьи</a>
+                            <a class="navigation__link navigation__link--white" href="/articles.html">Статьи</a>
                         </div>
                     </nav>
                     <div class="social toolbar__helper">
