--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,10 @@
                 <a class="navigation__link" href="/about.html">О нас</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Сквош-вики</a>
+                <a class="navigation__link" href="/wiki.html">Сквош-вики</a>
             </div>
             <div class="navigation__item ">
-                <a class="navigation__link" href="#">Статьи</a>
+                <a class="navigation__link" href="/articles.html">Статьи</a>
             </div>
         </nav>
         <div class="feedback menu__block linkBlock">
@@ -821,7 +821,7 @@
             </div>
             <div class="articles__footer">
                 <div class="articles__linkAll linkBlock">
-                    <a class="linkBlock__item linkBlock__item--white">Все статьи &rarr;</a>
+                    <a href="/articles.html" class="linkBlock__item linkBlock__item--white">Все статьи &rarr;</a>
                 </div>
                 <div class="articles__paginationWrapper">
                     <button class="slick-prev paginationBlock__item" data-slider="articles-slider"
@@ -868,10 +868,10 @@
                             <a class="navigation__link navigation__link--white" href="/about.html">О нас</a>
                         </div>
                         <div class="navigation__item">
-                            <a class="navigation__link navigation__link--white" href="#">Сквош-вики</a>
+                            <a class="navigation__link navigation__link--white" href="/wiki.html">Сквош-вики</a>
                         </div>
                         <div class="navigation__item ">
-                            <a class="navigation__link navigation__link--white" href="#">Статьи</a>
+                            <a class="navigation__link navigation__link--white" href="/articles.html">Статьи</a>
                         </div>
                     </nav>
                     <div class="social toolbar__helper">
